@@ -2778,8 +2778,28 @@ result as a vector and not added together.</para>
 	  </para>
           <para>
 	    See
+	    <ulink url="http://en.wikipedia.org/wiki/Eigenvalue">Wikipedia</ulink> or
 	    <ulink url="http://planetmath.org/encyclopedia/Eigenvalue.html">Planetmath</ulink> or
 	    <ulink url="http://mathworld.wolfram.com/Eigenvalue.html">Mathworld</ulink> for more information.
+          </para>
+         </listitem>
+        </varlistentry>
+
+        <varlistentry id="gel-function-Eigenvectors">
+         <term>Eigenvectors</term>
+         <listitem>
+          <synopsis>Eigenvectors (M)</synopsis>
+          <synopsis>Eigenvectors (M, &amp;eigenvalues)</synopsis>
+          <synopsis>Eigenvectors (M, &amp;eigenvalues, &amp;multiplicities)</synopsis>
+	  <para>Get the eigenvectors of a square matrix.  Optionally get also
+the eigenvalues and their algebraic multiplicities.
+	    Currently only works for matrices of size up to 2 by 2.
+	  </para>
+          <para>
+	    See
+	    <ulink url="http://en.wikipedia.org/wiki/Eigenvector">Wikipedia</ulink> or
+	    <ulink url="http://planetmath.org/encyclopedia/Eigenvector.html">Planetmath</ulink> or
+	    <ulink url="http://mathworld.wolfram.com/Eigenvector.html">Mathworld</ulink> for more information.
           </para>
          </listitem>
         </varlistentry>
