@@ -1,3 +1,11 @@
+Wed Nov 19 00:29:04 2008  Jiri (George) Lebl <jirka@5z.com>
+
+	* lib/linear_algebra/linear_algebra.gel:  Add Eigenvectors.
+	  Currently only for 2x2 matrices where computing eigenvectors is
+	  relatively easy
+
+	* help/C/gel-function-list.xml: add Eigenvectors
+
 Fri Nov 14 00:29:17 2008  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: slopefield works from GUI in a very rudimentary way
